zeit.brightcove changes
=======================

2.0.2 (unreleased)
------------------

- Nothing changed yet.


2.0.1 (2011-11-23)
------------------

- Import and export references (#9831).

- Fix change detection of playlists (#9976)

- Remove bits and pieces which try to save playlists back to brightcove:
  playlists are not changed in the CMS so there is no need to actually update
  brightcove.

- Map brightcove release date correcly to date first released.

- Default Daily Newsletter to false for videos.

- Move serie source to zeit.content.video.

- BC-Deleted videos are now retracted in one pass and deleted in a second
  pass. This means that they are actually being retracted.

- BC-Inactive videos are now kept in the CMS as unpublished objects.


2.0.0 (2011-11-13)
------------------

- Impport videos and playlists into the DAV servers (#8996).

- Add backward compatibility adapters for old video and playlist unique Ids
  (#9746).


0.10.0 (2011-08-12)
-------------------

- added mediadeliverymethod in connection.


0.9.1 (2011-04-29)
------------------

- Add timeout for all Brightcove requests (#8021).


0.9.0 (2011-03-23)
------------------

- Changed mapping for ``last-semantic-change`` to ``date_first_released``

- Videos can be checked out now by the system. This allows to create free
  teasers of videos (for #7826).

- Extracted ``get_expires`` to get the me earliest expires date from a list of
  playlists and videos.

- Change indexes as the interface requires an solr attribute now (for #8559)

- Remove Brightcove content from addcentral.


0.8.0 (2010-08-16)
------------------

- New layout for video-form 

- Honour the default values of the interface in mapped properties.


0.7.0 (2010-08-09)
------------------

- Fix tests after changes in zeit.cms (#7549)
- changes some default values  
- Knopf für "Speichern und zur Suche" (#7827)

0.6.1 (2010-07-15)
------------------
