@@ -4,7 +4,8 @@ zeit.brightcove changes
 2.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- When importing from BC, also publish videos/playlists when they already are
+  published but have been changed in DAV (#10023).
 
 
 2.0.1 (2011-11-23)
